<resources>
    <string name="app_name">Blu Dragon</string>

    <!--SIGNIN ACTIVITY -->
    <string name="sign_in_text">Sign in</string>
    <string name="sign_up_text">Sign up</string>
    <string name="forgot_pwd_text">Forgot password?</string>
    <string name="register_text">Create a new account</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="verification_code">Verification Code</string>

    <!--TIMELINE FRAGMENT -->
    <string name="timeline">Timeline</string>
    <string name="post_heading">What\'s on your mind?</string>
    <string name="status">Status</string>
    <string name="photos">Photos</string>
    <string name="gallary">Upload Image</string>
    <string name="camera">Camera</string>
    <string name="life_event">Life Event</string>

    <!--NAVIGATION FRAGMENT -->
    <string name="navigation">Navigation</string>
    <string name="help_and_settings">Help and Settings</string>
    <string name="settings">Settings</string>
    <string name="app_options">App Options</string>

    <!--FRIEND REQS FRAGMENT -->
    <string name="friend_requests">Friend Requests</string>
    <string name="sent_requests">Browse Profiles</string>
    <string name="all_friends">All Friends</string>
    <string name="confirm">Confirm</string>
    <string name="delete">Delete</string>

    <!--NOTIFICATION FRAGMENT -->
    <string name="noticfications">Notifications</string>

    <!--SETTINGS FRAGMENT -->
    <string name="apply">Apply</string>

    <string name="settingpublic">Public</string>
    <string name="settingonline">Online</string>

    <!--CREATE POST FRAGMENT-->
    <string name="post">Post</string>
    <string name="post_success">Posted Successfully!</string>

    <!--PROFILE FRAGMENT -->
    <string name="edit">Edit</string>
    <string name="posts">Posts</string>
    <string name="see_all_friends">See all Friends</string>
    <string name="update_info">Update Info</string>
    <string name="user_profile">Profile</string>
    <string name="profession">Profession: %1s</string>
    <string name="location">Location: %1s</string>
    <string name="about_me">About me: %1s</string>
    <string name="interests">Interests: %1s</string>

    <!--UPDATE PROFILE FRAGMENT -->
    <string name="update_profile">Update Profile</string>

    <!--MENU ITEM -->
    <string name="done">Done</string>
    <string name="title">Title</string>


    <!--Upadate Profile-->
    <string name="pemail">Email</string>
    <string name="pscreebname">Screen Name</string>
    <string name="pprofession">Profession</string>
    <string name="plocation">Location</string>
    <string name="pabout_me">About me</string>
    <string name="pinterests">Interests</string>
    <string name="update">Update</string>

    <!-- Serach Fiends -->
    <string name="search">Search</string>
    <string name="searchemailscreenname">Email/Screen-Name</string>

    <!-- Verify Code -->
    <string name="verify">Verify</string>



</resources>
