<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="@color/colorPrimary" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/email_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:backgroundTint="@color/colorLightGray"
                android:hint="@string/email_hint"
                android:maxLines="1"
                android:paddingBottom="16dp" />

            <EditText
                android:id="@+id/password_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:backgroundTint="@color/colorLightGray"
                android:hint="@string/password_hint"
                android:inputType="textPassword"
                android:maxLines="1"
                android:paddingBottom="16dp" />

            <!--TODO: change signin text color -->
            <Button
                android:id="@+id/sign_in_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:background="@color/colorPrimary"
                android:text="@string/sign_in_text"
                android:textAllCaps="true"
                android:textColor="#afbdd4"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/forgot_password_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:gravity="center"
                android:text="@string/forgot_pwd_text"
                android:textAllCaps="true"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold" />

        </LinearLayout>

        <Button
            android:id="@+id/sign_up_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="42dp"
            android:background="@color/colorDarkCyan"
            android:text="@string/register_text"
            android:textAllCaps="true"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

    </LinearLayout>

</ScrollView>