<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="@android:color/white"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="16dp">

        <ImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@mipmap/ic_launcher"/>

        <TextView
            android:layout_marginStart="12dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/post_heading" />

    </LinearLayout>

    <include layout="@layout/view_seperator" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:gravity="center"
            android:text="@string/status"
            android:layout_weight="1"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:gravity="center"
            android:text="@string/photos"
            android:layout_weight="1"/>

    </LinearLayout>

    <include layout="@layout/view_seperator" />

</LinearLayout>