<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@android:color/white"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/cover_pic_imageview"
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:background="@drawable/gradient_background_blue_grey"/>

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="116dp">

            <ImageView
                android:id="@+id/profile_pic_imageview"
                android:layout_width="84dp"
                android:layout_height="84dp"
                android:background="@color/colorPrimary"/>

            <TextView
                android:id="@+id/profile_pic_edit_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|bottom"
                android:textColor="@android:color/black"
                android:background="@color/colorBackgroundGray"
                android:padding="2dp"
                android:text="@string/edit"
                android:textAllCaps="true"
                android:visibility="gone" />

        </FrameLayout>

    </FrameLayout>

    <TextView
        android:id="@+id/screen_name_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:layout_marginTop="12dp"
        android:text="Screen name"
        android:textStyle="bold"
        android:textAllCaps="true"
        android:textSize="23sp"
        android:gravity="center_horizontal"/>

    <TextView
        android:id="@+id/email_id_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:gravity="center_horizontal"
        android:text="email id"
        android:textSize="18sp" />


    <include layout="@layout/view_seperator"/>

    <LinearLayout
        android:layout_height="match_parent"
        android:layout_margin="12dp"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:weightSum="2">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/profession_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/profession" />

            <TextView
                android:id="@+id/location_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/location" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/about_me_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_me" />

            <TextView
                android:id="@+id/interests_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/interests" />

        </LinearLayout>

    </LinearLayout>

    <include layout="@layout/view_seperator" />

</LinearLayout>